--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
@@ -18,6 +19,8 @@
     "react-localization": "^1.0.19",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.0.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
