--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-localization": "^1.0.19",
+    "react-otp-input": "^3.0.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
