manage show/hide change password field in profile module

--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.9.3",
     "react-hook-form": "^7.43.5",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-localization": "^1.0.19",
     "react-otp-input": "^3.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.0.17",
     "web-vitals": "^2.1.4"
