--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.43.5",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
