--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
+    "react-apple-signin-auth": "^1.0.9",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
