--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sweetalert": "^2.1.2",
