working on classied filterdesign

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
+    "mobiscroll-react": "^4.0.0",
     "react": "^18.2.0",
     "react-apple-signin-auth": "^1.0.9",
     "react-bootstrap": "^2.7.2",
@@ -23,6 +24,7 @@
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-localization": "^1.0.19",
+    "react-modal": "^3.16.1",
     "react-otp-input": "^3.0.0",
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.12.0",
