--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-apple-signin-auth": "^1.0.9",
     "react-bootstrap": "^2.7.2",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
     "react-facebook-login": "^4.1.1",
