fix feedback points

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "mobiscroll-react": "^4.0.0",
+    "node-modules": "^1.0.1",
     "react": "^18.2.0",
     "react-apple-signin-auth": "^1.0.9",
     "react-bootstrap": "^2.7.2",
