--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@react-google-maps/api": "^2.18.1",
     "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
@@ -11,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "get-orientation": "^1.1.2",
     "google-map-react": "^2.2.0",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -19,9 +22,9 @@
     "react": "^18.2.0",
     "react-apple-signin-auth": "^1.0.9",
     "react-bootstrap": "^2.7.2",
-    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
+    "react-easy-crop": "^4.7.4",
     "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.43.5",
     "react-i18next": "^12.2.0",
