--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-select": "^5.7.2",
     "react-share": "^4.4.1",
     "react-share-social": "^0.1.55",
+    "react-tooltip": "^5.13.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sweetalert": "^2.1.2",
