--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mobiscroll-react": "^4.0.0",
     "node-modules": "^1.0.1",
     "react": "^18.2.0",
+    "react-apple-login": "^1.1.6",
     "react-apple-signin-auth": "^1.0.9",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.43.5",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
+    "react-linkedin-login-oauth2": "^2.0.1",
     "react-localization": "^1.0.19",
     "react-modal": "^3.16.1",
     "react-otp-input": "^3.0.0",
