--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "react-select": "^5.7.2",
     "react-share": "^4.4.1",
     "react-share-social": "^0.1.55",
+    "react-slick": "^0.29.0",
     "react-tooltip": "^5.13.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.0.17",
     "web-vitals": "^2.1.4"
