--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
+    "slick-slider": "^1.8.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.0.17",
     "web-vitals": "^2.1.4"
